Issue #10750: The `raw` attribute of buffered IO objects is now read-only.